# MultiAgentExploration

./: .gitignore  CMakeLists.txt  Diagrams.md  INSTALL-PLAYER.md  LICENSE.txt  README.md  archive-plot  create-plots  get-deps  install-dep  run
cmake-modules/: FindEasylogging++.cmake  FindUnitTest++.cmake  FindYamlCpp.cmake
config/: ant-config.yaml  compass-1.yaml  compass-2.yaml  compass-4.yaml  compass-8.yaml  compass.yaml  compass_test_single.yaml  easylog.conf  lrtastar-1.yaml  lrtastar-2.yaml  lrtastar-4.yaml  lrtastar-8.yaml  lrtastar.yaml  lrtastar_test_single.yaml  node_counting_test_single.yaml  nodecounting-1.yaml  nodecounting-2.yaml  nodecounting-4.yaml  nodecounting-8.yaml  nodecounting-simple-rooms-4.yaml  nodecounting.yaml  nodecounting_test_single.yaml  randomwalk-1.yaml  randomwalk-2.yaml  randomwalk-4.yaml  randomwalk-8.yaml  randomwalk.yaml  randomwalk_test_single.yaml  test_simulation.yaml  wagner-1.yaml  wagner-2.yaml  wagner-4.yaml  wagner-8.yaml  wagner.yaml  wagner_test_single.yaml
config/obstructed/: compass-1.yaml  compass-2.yaml  compass-4.yaml  compass-8.yaml  lrtastar-1.yaml  lrtastar-2.yaml  lrtastar-4.yaml  lrtastar-8.yaml  nodecounting-1.yaml  nodecounting-2.yaml  nodecounting-4.yaml  nodecounting-8.yaml  randomwalk-1.yaml  randomwalk-2.yaml  randomwalk-4.yaml  randomwalk-8.yaml  wagner-1.yaml  wagner-2.yaml  wagner-4.yaml  wagner-8.yaml
config/office/: compass-1.yaml  compass-2.yaml  compass-4.yaml  compass-8.yaml  lrtastar-1.yaml  lrtastar-2.yaml  lrtastar-4.yaml  lrtastar-8.yaml  nodecounting-1.yaml  nodecounting-2.yaml  nodecounting-4.yaml  nodecounting-8.yaml  randomwalk-1.yaml  randomwalk-2.yaml  randomwalk-4.yaml  randomwalk-8.yaml  wagner-1.yaml  wagner-2.yaml  wagner-4.yaml  wagner-8.yaml
config/open/: compass-1.yaml  compass-2.yaml  compass-4.yaml  compass-8.yaml  lrtastar-1.yaml  lrtastar-2.yaml  lrtastar-4.yaml  lrtastar-8.yaml  nodecounting-1.yaml  nodecounting-2.yaml  nodecounting-4.yaml  nodecounting-8.yaml  randomwalk-1.yaml  randomwalk-2.yaml  randomwalk-4.yaml  randomwalk-8.yaml  wagner-1.yaml  wagner-2.yaml  wagner-4.yaml  wagner-8.yaml
plot/: AlgorithmDirectory.py  DataFile.py  ExperimentDirectory.py  algorithmdir.py  datafile.py  experimentdir.py  plot-coverage-events-multi-robot.gp  plot-coverage-events.gp  plot-visits-heatmap.gp  plot.py  plot2.py  utils.py
plot/maeplot/: algorithmdir.py  datafile.py  experimentdir.py  meandata.py  plotdata.py  plotdir.py  utils.py
script/: cnt_pix.py  create-plots  get-deps  newMarker  plot.py  run
script/maeplot/: algorithmdir.py  experiment.py  experimentdir.py  meandata.py  plotdata.py  plotdir.py  utils.py
src/: main.cpp
src/algorithm/: Algorithm.hpp  AlgorithmConfig.hpp  AntAlgorithm.cpp  AntAlgorithm.hpp  AntState.cpp  AntState.hpp  AntStates.cpp  AntStates.hpp  AntUpdateRules.cpp  AntUpdateRules.hpp  CollisionResolver.cpp  CollisionResolver.hpp  DroppingMarker.cpp  DroppingMarker.hpp  Experiment.cpp  Experiment.hpp  ExperimentConfig.hpp  ExperimentLoader.cpp  ExperimentLoader.hpp  ExperimentTermination.cpp  ExperimentTermination.hpp  HeisenbergObstacleAvoid.cpp  HeisenbergObstacleAvoid.hpp  InitialAntState.cpp  InitialAntState.hpp  MoveToMarker.cpp  MoveToMarker.hpp  (+20 more)
src/algorithm-compass/: AtMarker.cpp  AtMarker.hpp  CompassAlgorithm.cpp  CompassAlgorithm.hpp  CompassState.hpp  DeployMarker.cpp  DeployMarker.hpp  InitialCompassState.cpp  InitialCompassState.hpp  SearchMarker.cpp  SearchMarker.hpp
src/algorithm-rt/: AntAlgorithm.cpp  AntAlgorithm.hpp  AntState.cpp  AntState.hpp  DroppingMarker.cpp  DroppingMarker.hpp  InitialAntState.cpp  InitialAntState.hpp  LRTAStar.cpp  LRTAStar.hpp  MovingToDirection.cpp  MovingToDirection.hpp  MovingToMarker.cpp  MovingToMarker.hpp  NodeCounting.cpp  NodeCounting.hpp  SelectingTarget.cpp  SelectingTarget.hpp  UpdatingValue.cpp  UpdatingValue.hpp  Wagner.cpp  Wagner.hpp
world/: obstructed-1.world  obstructed-2.world  obstructed-4.world  obstructed-8.world  office-1.world  office-2.world  office-4.world  office-8.world  office.cfg  office.world  open-1.world  open-2.world  open-4.world  open-8.world  simple-rooms-4.world  test.cfg  test.world
(+139 files in other folders)
